--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-logs
-project/project
-project/target
-target
-tmp
+.idea/
+target/
+lib_managed/
+src_managed/
+project/boot/
+out/
+*~
+*.iml
+*.ipr
+*.iws
